# c0-rs

./: .gitmodules  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: builder.rs  csv.rs  diff.rs  document.rs  json.rs  lib.rs  pretty.rs  stream.rs  table.rs  token.rs  tokenizer.rs
tests/: conformance.rs  converters.rs  integration.rs  json.rs
