[package]
name = "c0"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["Thomas Sawyer <transfire@gmail.com>"]
license = "MIT"
description = "C0DATA — structured data using ASCII C0 control codes"
keywords = ["c0", "c0data", "data-format", "control-codes", "serialization"]
categories = ["encoding", "parser-implementations"]
repository = "https://github.com/c0data/c0-rs"

[features]
default = []
# JSON text conversion (to_json/from_json). Off by default to keep the
# library dependency-free; the Value conversions need no dependency.
json = ["dep:serde_json"]

[dependencies]
serde_json = { version = "1", optional = true, features = ["preserve_order"] }

[dev-dependencies]
# Always available to tests (the conformance runner reads JSON fixtures).
serde_json = { version = "1", features = ["preserve_order"] }
